infrastructure/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.justgui.dev`)
      kind: Rule
      middlewares:
        - name: redirect-websecure
          namespace: shared
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-transport
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-tls
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.justgui.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-server-transport
  tls:
    certResolver: letsencrypt
